--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <!doctype html>
 <html>
-<head> HELLO!
-<HELLO!>
+<head> 
 <title>JONSGITHUB</title>
-</head>
-
+</head><h2>What Is A Major Riverrrr</h2>
+	
+	
 <body>
+<h3>EUPHRATES</h3>
+<h4>EUPHRATES TIGRIS AND JORDAN</h4>
+<p>These Rivers Connect near <i title="near ISREAL" style="color: blue">ISREAL</i></p>
+	<img src="35.jpg" width="737" height="364" alt=""/>
 </body>
 </html>
