--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html>
 <head> 
 <title>JONSGITHUB</title>
-</head><h2>What Is A Major Riverrrr</h2>
+</head><h2>What Is A Major River</h2>
 	
 	
 <body>
+<img src="37.jpg" width="520" height="289" alt=""/>
 <h3>EUPHRATES</h3>
 <h4>EUPHRATES TIGRIS AND JORDAN</h4>
 <p>These Rivers Connect near <i title="near ISREAL" style="color: blue">ISREAL</i></p>
-	<img src="35.jpg" width="737" height="364" alt=""/>
 </body>
 </html>
