--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head> 
 <title>JONSGITHUB</title>
-</head><h2>What Is A Major River</h2>
+</head><h2>What Is A Major Riverr</h2>
 <body>
 <img src="39.png" width="520" height="289" alt=""/>
 <h3>EUPHRATES</h3>
