--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head> 
 <title>JONSGITHUB</title>
-</head><h2>What Is A Major Riverr</h2>
+</head><h2>What Is A Major River</h2>
 <body>
 <img src="images88.jpg" width="275" height="183" alt=""/>
 <h3>EUPHRATES</h3>
