--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>JONSGITHUB</title>
 </head><h2>What Is A Major River</h2>
 <body>
-<img src="images88.jpg" width="275" height="183" alt=""/>
+<img src="file:///C|/Users/SPC-Student/Pictures/44.gif" width="461" height="300" alt=""/>
 <h3>EUPHRATES</h3>
 <h4>EUPHRATES TIGRIS AND JORDAN</h4>
 <p>These Rivers Connect near <i title="near ISREAL" style="color: blue">ISREAL</i></p>
