--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 <head> 
 <title>JONSGITHUB</title>
-</head><h2>What Is A Major River</h2>
+</head><h2>What Is A Major Riverr</h2>
 <body>
-<img src="file:///C|/Users/SPC-Student/Pictures/44.gif" width="461" height="300" alt=""/>
+<img src="49.jpg" width="236" height="161" alt=""/>
 <h3>EUPHRATES</h3>
 <h4>EUPHRATES TIGRIS AND JORDAN</h4>
 <p>These Rivers Connect near <i title="near ISREAL" style="color: blue">ISREAL</i></p>
