--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
 <body>
 <img src="49.jpg" width="236" height="161" alt=""/>
 <h3>EUPHRATES</h3>
-<h4>EUPHRATES TIGRIS AND JORDAN</h4>
-<p>These Rivers Connect near <i title="near ISREAL" style="color: blue">ISREAL</i></p>
+<h4>EUPHRATES TIGRIS AND <a href="Untitled-155.html">JORDAN</a></h4>
+<p>These Rivers Connect near <i title="near ISREAL" style="color: red">ISREAL</i></p>
 </body>
+
 
 </html>
