--- a/index.html
+++ b/index.html
@@ -1,14 +1,27 @@
 <!doctype html>
 <html>
-<head> 
-<title>JONSGITHUB</title>
-</head><h2>What Is A Major Riverr</h2>
+<head>
+<meta charset="utf-8">
+<title>NEW FONt 3</title>
+</head>
+
 <body>
-<img src="49.jpg" width="236" height="161" alt=""/>
-<h3>EUPHRATES</h3>
-<h4>EUPHRATES TIGRIS AND <a href="Untitled-155.html">JORDAN</a></h4>
-<p>These Rivers Connect near <i title="near ISREAL" style="color: red">ISREAL</i></p>
-</body>
+<form></form>
+	
+<label> First name:</label>	
+	<input type="text" id="first"><br>
+	<button type="submit">submit</button>
+	
+	
+	<form> 
 
-
-</html>
+		
+		
+		
+<iframe width="560" height="315" src="https://www.youtube.com/embed/E5MEzC0prd4?si=y6Zx0gllJ1bESaEI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+	
+	
+	
+	</form>
+	</body>
+	</html>
