--- a/index.html
+++ b/index.html
@@ -1,27 +1,34 @@
-<!doctype html>
-<html>
-<head>
-<meta charset="utf-8">
-<title>NEW FONt 3</title>
-</head>
-
-<body>
-<form></form>
+<style>
+.container-1{
+	height: 90vh;
+	 	width: 1020;
+		margin: 0 auto;
+		display: flex;
+		align-items: flex-start;
+		align-items: flex-end;
+		align-items: flex-end;
+		flex-direction: column}	
 	
-<label> First name:</label>	
-	<input type="text" id="first"><br>
-	<button type="submit">submit</button>
-	
-	
-	<form> 
-
-		
-		
-		
-<iframe width="560" height="315" src="https://www.youtube.com/embed/E5MEzC0prd4?si=y6Zx0gllJ1bESaEI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+	.container-1 div{
+	   border:1 pix #ccc solid
+	   }
 	
 	
+	.box-1{
+		color: aqua
+		flex: 2;
+		order: 2;
+	}
 	
-	</form>
-	</body>
-	</html>
+	.box-2{
+		color: navy
+		flex: 1;
+		order: 1;
+	}
+	
+	.box-3{
+		color: red
+		flex: 1;
+		order: 3;
+	}
+	<div class= "container-1">
