--- a/index.html
+++ b/index.html
@@ -1,14 +1,43 @@
-<!doctype html>
+ <!doctype html>
 <html>
-<head> 
-<title>JONSGITHUB</title>
-</head><h2>What Is A Major Riverr</h2>
-<body>
-<img src="49.jpg" width="236" height="161" alt=""/>
-<h3>EUPHRATES</h3>
-<h4>EUPHRATES TIGRIS AND <a href="Untitled-155.html">JORDAN</a></h4>
-<p>These Rivers Connect near <i title="near ISREAL" style="color: red">ISREAL</i></p>
-</body>
+<head>
+<meta charset="utf-8">
+<title>NEW FONt 3</title>
+</head>
+.container-1{
+	height: 90vh;
+	 	width: 1020;
+		margin: 0 auto;
+		display: flex;
+		align-items: flex-start;
+		align-items: flex-end;
+		align-items: flex-end;
+		flex-direction: column}	
+	
+	.container-1 div{
+	   border:1 pix #ccc solid
+	   }
+	
+	
+	.box-1{
+		color: aqua
+		flex: 2;
+		order: 2;
+	}
+	
+	.box-2{
+		color: navy
+		flex: 1;
+		order: 1;
+	}
+	
+	.box-3{
+		color: red
+		flex: 1;
+		order: 3;
+	}
+	<div class= "container-1">
+		
 
-
-</html>
+	
+	
