--- a/index.html
+++ b/index.html
@@ -1,43 +1,22 @@
- <!doctype html>
+<!DOCTYPE html>
 <html>
 <head>
-<meta charset="utf-8">
-<title>NEW FONt 3</title>
+<style>
+div {
+  width: 320px;
+  height: 50px;
+  padding: 10px;
+  border: 5px solid gray;
+  margin: 0;
+}
+</style>
 </head>
-.container-1{
-	height: 90vh;
-	 	width: 1020;
-		margin: 0 auto;
-		display: flex;
-		align-items: flex-start;
-		align-items: flex-end;
-		align-items: flex-end;
-		flex-direction: column}	
-	
-	.container-1 div{
-	   border:1 pix #ccc solid
-	   }
-	
-	
-	.box-1{
-		color: aqua
-		flex: 2;
-		order: 2;
-	}
-	
-	.box-2{
-		color: navy
-		flex: 1;
-		order: 1;
-	}
-	
-	.box-3{
-		color: red
-		flex: 1;
-		order: 3;
-	}
-	<div class= "container-1">
-		
+<body>
 
-	
-	
+<h2>Calculate the total width:</h2>
+
+<img src="klematis4_big.jpg" width="350" height="263" alt="Klematis">
+<div>The picture above is 350px wide. The total width of this element is also 350px. The total height of this element is 80px.</div>
+
+</body>
+</html>
