--- a/index.html
+++ b/index.html
@@ -1,22 +1,38 @@
-<!DOCTYPE html>
-<html>
-<head>
+<div class="wrapper">
+<h1>class</h1></div>
+<p>freedom</p>
+	<article>
+<div contextmenu="Hello"></div> 
+
+<h1 align="center"></h1>
+<h2>whats up</h2><acronym></acronym>
+<body bgcolor="#40F513"></body>
+
+<h1 class="container"></h1>
+		<flex box></flex><h1></h1><container-1></container-1><bgcolor></bgcolor>
+		
+		<head>
 <style>
 div {
+	justify-content: flex-start
+		space-around 10;
+		flex-start
+		space-between
+	text-justify: inherit
   width: 320px;
-  height: 50px;
+  height: 80px;
   padding: 10px;
-  border: 5px solid gray;
-  margin: 0;
+  border: 5px solid blue; justify-content: space-around
+  margin: ; alignment-baseline: baseline
+	  ideographic central
+	  alphabetic
+	  mathematical
 }
 </style>
 </head>
 <body>
+<div>
+	<font size="+4"
 
-<h2>Calculate the total width:</h2>
-
-<img src="klematis4_big.jpg" width="350" height="263" alt="Klematis">
-<div>The picture above is 350px wide. The total width of this element is also 350px. The total height of this element is 80px.</div>
-
-</body>
-</html>
+	<div>
+		align <center></center>
