--- a/index.html
+++ b/index.html
@@ -69,3 +69,24 @@ div {
 
 	<div>
 		align
+	
+
+	
+		
+
+
+
+ <style></style>
+		<div class="container-1">
+	 <div class="box-1">
+		 <h3>box one</h3> 
+		 <p>Hello</p>
+	  <div></div>
+		 <div class="box-2">
+			 <h2>box two</h2>
+			 <p>whats up</p>
+			 <div></div>
+<div class="box three">
+	<h1> box three</h1>
+	<p>how are you</p>
+<div></div>
