--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 <title>Untitled Document</title>
 </head>
 
-<body>
-&lt;iframe width=&quot;1920&quot; height=&quot;1256&quot; src=&quot;https://xd.adobe.com/embed/05b61ea2-6f93-4fb2-9d02-75648c708256-50e5/&quot; frameborder=&quot;0&quot; allowfullscreen&gt;&lt;/iframe&gt;
+<body><iframe width="1037" height="532" src="https://xd.adobe.com/embed/05b61ea2-6f93-4fb2-9d02-75648c708256-50e5/" frameborder="0" allowfullscreen></iframe>
 </body>
 </html>
