--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 <title>Untitled Document</title>
 </head>
 
-<body><iframe width="1920" height="1934" src="https://xd.adobe.com/embed/2128305e-82a8-4850-8ded-55cf086029e3-747b/" frameborder="0" allowfullscreen></iframe>
+<body><iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FC6JCwehDqc98EbXZ7kFm54%2FUntitled%3Ftype%3Ddesign%26node-id%3D1%253A2%26mode%3Ddesign%26t%3DdkdMzMPqDle06Os2-1" allowfullscreen></iframe>
 </body>
 </html>
