--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 <title>Untitled Document</title>
 </head>
 
-<body><iframe width="1280" height="396" src="https://xd.adobe.com/embed/34f9262c-2933-470c-a094-6ed92505822e-61aa/" frameborder="0" allowfullscreen></iframe>
+<body><iframe style="border: 0px solid rgba(0, 0, 0, 0.1);" width="400" height="850" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FC6JCwehDqc98EbXZ7kFm54%2FUntitled%3Ftype%3Ddesign%26node-id%3D0%253A1%26mode%3Ddesign%26t%3DEuaLjPkalHeQqDGV-1" allowfullscreen></iframe>
 </body>
 </html>
