--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   </script>
 </head>
 <body>
+	<iframe width="1920" height="1934" src="https://xd.adobe.com/embed/8a1a9e3d-7122-4753-b4da-450be1ff88b0-df49/" frameborder="0" allowfullscreen></iframe>
  
 <div id="accordion">
   <h3>Section 1</h3>
@@ -64,6 +65,6 @@
 </div>
 
 
-<body><iframe width="1920" height="1934" src="https://xd.adobe.com/embed/8a1a9e3d-7122-4753-b4da-450be1ff88b0-df49/" frameborder="0" allowfullscreen></iframe>
+<body>
 </body>
 </html>
