--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html><html lang="en"><head>
+<!doctype html><body></body><html lang="en"><head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>jQuery UI Accordion - Default functionality</title>
@@ -13,7 +13,6 @@
   </script>
 </head>
 <body>
-	<iframe width="1920" height="1934" src="https://xd.adobe.com/embed/8a1a9e3d-7122-4753-b4da-450be1ff88b0-df49/" frameborder="0" allowfullscreen></iframe>
  
 <div id="accordion">
   <h3>Section 1</h3>
@@ -62,8 +61,7 @@
     inceptos himenaeos.
     </p>
   </div>
-</div>
-
+</div><body></body>
 
 <body>
 </body>
