--- a/index.html
+++ b/index.html
@@ -5,14 +5,7 @@
 <title>Untitled Document</title>
 </head>
 
-<body><iframe width="1920" height="1934" src="https://xd.adobe.com/embed/8a1a9e3d-7122-4753-b4da-450be1ff88b0-df49/" <div><!doctype html>
-<html>
-<head>
-<meta charset="utf-8">
-<title>Untitled Document</title>
-</head>
-
-<body><iframe width="1920" height="1934" src="https://xd.adobe.com/embed/8a1a9e3d-7122-4753-b4da-450be1ff88b0-df49/" <html lang="en"><head>
+<body><iframe width="1920" height="1934" src="https://xd.adobe.com/embed/8a1a9e3d-7122-4753-b4da-450be1ff88b0-df49/" frameborder="0" allowfullscreen></iframe><iframe><html lang="en"><head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>jQuery UI Accordion - Default functionality</title>
@@ -75,8 +68,6 @@
     inceptos himenaeos.
     </p>
   </div>
-</div>src=frameborder="0" allowfullscreen></iframe>
-</body>
-</html><div></div></iframe>
+</div></iframe>
 </body>
 </html>
