--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <body><iframe width="1920" height="1934" src="https://xd.adobe.com/embed/8a1a9e3d-7122-4753-b4da-450be1ff88b0-df49/" frameborder="0" allowfullscreen></iframe><iframe><html lang="en"><head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=1000" content="height=5", initial-scale=1">
+  <meta name="viewport" content="width=1000, initial-scale=1">
   <title>jQuery UI Accordion - Default functionality</title>
   <link rel="stylesheet" href="https://code.jquery.com/ui/1.13.3/themes/base/jquery-ui.css">
   <link rel="stylesheet" href="/resources/demos/style.css">
