--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title>Untitled Document</title>
 </head>
 
-<body><iframe width="1920" height="1934" src="https://xd.adobe.com/embed/8a1a9e3d-7122-4753-b4da-450be1ff88b0-df49/" frameborder="0" allowfullscreen></iframe><iframe><html lang="en"><head>
+<body><iframe width="1920" height="1000" src="https://xd.adobe.com/embed/8a1a9e3d-7122-4753-b4da-450be1ff88b0-df49/" frameborder="0" allowfullscreen></iframe><iframe><html lang="en"><head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=1000, initial-scale=1">
   <title>jQuery UI Accordion - Default functionality</title>
@@ -22,31 +22,22 @@
 <body>
  
 <div id="accordion">
-  <h3>Section 1</h3>
+  <h3>tab 1</h3>
   <div>
     <p>
-    Mauris mauris ante, blandit et, ultrices a, suscipit eget, quam. Integer
-    ut neque. Vivamus nisi metus, molestie vel, gravida in, condimentum sit
-    amet, nunc. Nam a nibh. Donec suscipit eros. Nam mi. Proin viverra leo ut
-    odio. Curabitur malesuada. Vestibulum a velit eu ante scelerisque vulputate.
+    stockmarket
     </p>
   </div>
-  <h3>Section 2</h3>
+  <h3>tab 2</h3>
   <div>
     <p>
-    Sed non urna. Donec et ante. Phasellus eu ligula. Vestibulum sit amet
-    purus. Vivamus hendrerit, dolor at aliquet laoreet, mauris turpis porttitor
-    velit, faucibus interdum tellus libero ac justo. Vivamus non quam. In
-    suscipit faucibus urna.
+   stockmarket
     </p>
   </div>
-  <h3>Section 3</h3>
+  <h3>tab 3</h3>
   <div>
     <p>
-    Nam enim risus, molestie et, porta ac, aliquam ac, risus. Quisque lobortis.
-    Phasellus pellentesque purus in massa. Aenean in pede. Phasellus ac libero
-    ac tellus pellentesque semper. Sed ac felis. Sed commodo, magna quis
-    lacinia ornare, quam ante aliquam nisi, eu iaculis leo purus venenatis dui.
+    stockmarket
     </p>
     <ul>
       <li>List item one</li>
@@ -57,17 +48,13 @@
   <h3>Section 4</h3>
   <div>
     <p>
-    Cras dictum. Pellentesque habitant morbi tristique senectus et netus
-    et malesuada fames ac turpis egestas. Vestibulum ante ipsum primis in
-    faucibus orci luctus et ultrices posuere cubilia Curae; Aenean lacinia
-    mauris vel est.
+    stockmarket
     </p>
     <p>
-    Suspendisse eu nisl. Nullam ut libero. Integer dignissim consequat lectus.
-    Class aptent taciti sociosqu ad litora torquent per conubia nostra, per
-    inceptos himenaeos.
+  stockmarket
     </p>
+	  <iframe></iframe>
   </div>
-</div></iframe>
+</div>
 </body>
 </html>
