--- a/index.html
+++ b/index.html
@@ -5,39 +5,32 @@
 <title>Untitled Document</title>
 </head>
 
-<body><iframe width="1920" height="1000" src="https://xd.adobe.com/embed/8a1a9e3d-7122-4753-b4da-450be1ff88b0-df49/" frameborder="0" allowfullscreen></iframe><iframe><html lang="en"><head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=1000, initial-scale=1">
-  <title>jQuery UI Accordion - Default functionality</title>
-  <link rel="stylesheet" href="https://code.jquery.com/ui/1.13.3/themes/base/jquery-ui.css">
-  <link rel="stylesheet" href="/resources/demos/style.css">
-  <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
-  <script src="https://code.jquery.com/ui/1.13.3/jquery-ui.js"></script>
-  <script>
-  $( function() {
-    $( "#accordion" ).accordion();
-  } );
-  </script>
-</head>
-<body>
- 
-<div id="accordion">
-  <h3>tab 1</h3>
+<body><div id="accordion">
+  <h3>Section 1</h3>
   <div>
     <p>
-    stockmarket
+    Mauris mauris ante, blandit et, ultrices a, suscipit eget, quam. Integer
+    ut neque. Vivamus nisi metus, molestie vel, gravida in, condimentum sit
+    amet, nunc. Nam a nibh. Donec suscipit eros. Nam mi. Proin viverra leo ut
+    odio. Curabitur malesuada. Vestibulum a velit eu ante scelerisque vulputate.
     </p>
   </div>
-  <h3>tab 2</h3>
+  <h3>Section 2</h3>
   <div>
     <p>
-   stockmarket
+    Sed non urna. Donec et ante. Phasellus eu ligula. Vestibulum sit amet
+    purus. Vivamus hendrerit, dolor at aliquet laoreet, mauris turpis porttitor
+    velit, faucibus interdum tellus libero ac justo. Vivamus non quam. In
+    suscipit faucibus urna.
     </p>
   </div>
-  <h3>tab 3</h3>
+  <h3>Section 3</h3>
   <div>
     <p>
-    stockmarket
+    Nam enim risus, molestie et, porta ac, aliquam ac, risus. Quisque lobortis.
+    Phasellus pellentesque purus in massa. Aenean in pede. Phasellus ac libero
+    ac tellus pellentesque semper. Sed ac felis. Sed commodo, magna quis
+    lacinia ornare, quam ante aliquam nisi, eu iaculis leo purus venenatis dui.
     </p>
     <ul>
       <li>List item one</li>
@@ -48,12 +41,16 @@
   <h3>Section 4</h3>
   <div>
     <p>
-    stockmarket
+    Cras dictum. Pellentesque habitant morbi tristique senectus et netus
+    et malesuada fames ac turpis egestas. Vestibulum ante ipsum primis in
+    faucibus orci luctus et ultrices posuere cubilia Curae; Aenean lacinia
+    mauris vel est.
     </p>
     <p>
-  stockmarket
+    Suspendisse eu nisl. Nullam ut libero. Integer dignissim consequat lectus.
+    Class aptent taciti sociosqu ad litora torquent per conubia nostra, per
+    inceptos himenaeos.
     </p>
-	  <iframe></iframe>
   </div>
 </div>
 </body>
