--- a/index.html
+++ b/index.html
@@ -1,58 +1,45 @@
-<!doctype html>
-<html>
-<head>
-<meta charset="utf-8">
-<title>Untitled Document</title>
-<style type="text/css">
+Untitled Document 
 body,td,th {
     color: #8F07A2;
 }
 body {
     background-color: #0BEDC7;
 }
-</style>
-</head>
+STOCK MARKET ENTERPRISES
 
-<body style="font-family: 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', 'DejaVu Sans', Verdana, sans-serif; font-size: larger; color: #FC7F03; font-style: oblique; font-weight: bold;">
-<main>
-  <blockquote>
-    <blockquote>
-      <blockquote>
-        <blockquote>
-          <blockquote>
-            <blockquote>
-              <blockquote>
-                <blockquote>
-                  <p>STOCK MARKET ENTERPRISES</p>
-                </blockquote>
-              </blockquote>
-            </blockquote>
-          </blockquote>
-        </blockquote>
-      </blockquote>
-    </blockquote>
-  </blockquote>
-</main>
-<header style="font-family: Gotham, 'Helvetica Neue', Helvetica, Arial, sans-serif; font-size: larger; color: #013AF1; font-style: italic; font-weight: 900;">
-  <ol>
-    <ol>
-      <ol>
-        <ol>
-          <ol>
-            <ol>
-              <ol>
-                <img src="image1000photoshop.jpg" width="500" height="400" alt=""/><a href="page1000x2.html"><img src="snowstorm888.jpg" width="400" height="100" alt=""/></a>
-                <li>MANAGE STOCKS</li>
-                <section>                  
-                  <p>VIEW STOCKMARKET CHARTS AND GRAPHS<em></em>                </p>
-                </section>
-              </ol>
-            </ol>
-          </ol>
-        </ol>
-      </ol>
-    </ol>
-  </ol>
-</header>
-</body>
-</html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+MANAGE STOCKS
+
+VIEW STOCKMARKET CHARTS AND GRAPHS 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
