--- a/index.html
+++ b/index.html
@@ -40,13 +40,50 @@ body {
         <ol>
           <ol>
             <ol>
-              <img src="exportpng1000.png" width="500" height="400" alt=""/>
               <ol>
-<a href="page1000x2.html"></a><a href="page1000x2.html"><img src="exportpngarrow1000.png" width="300" height="200" alt=""/></a>
+                
+                <blockquote>
+                  <blockquote>
+                    <blockquote>
+                      <blockquote>
+                        <blockquote>
+                          <blockquote>
+                            <blockquote>
+                              <blockquote>
+                                <blockquote>
+                                  <blockquote>
+                                    <blockquote>
+                                      <blockquote>
+                                        <blockquote>
+                                          <blockquote>
+                                            <blockquote>
+                                              <blockquote>
+                                                <blockquote>
+                                                  <p><a href="xdfilepage2.html"><img src="snowstorm888.jpg" width="200" height="100" alt=""/></a>
+                                                  </p>
+                                                </blockquote>
+                                              </blockquote>
+                                            </blockquote>
+                                          </blockquote>
+                                        </blockquote>
+                                      </blockquote>
+                                    </blockquote>
+                                  </blockquote>
+                                </blockquote>
+                              </blockquote>
+                            </blockquote>
+                          </blockquote>
+                        </blockquote>
+                      </blockquote>
+                    </blockquote>
+                  </blockquote>
+                </blockquote>
                 <li>MANAGE STOCKS</li>
+              </ol>
+              <ol>
                 <section>                  
                   <p>VIEW STOCKMARKET CHARTS AND GRAPHS<em></em>                </p>
-                </section>
+                <img src="000stockmarket000.jpg" width="348" height="145" alt=""/>                </section>
               </ol>
             </ol>
           </ol>
