--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ body {
               <blockquote>
                 <blockquote>
                   <p>STOCK MARKET ENTERPRISES</p>
-                </blockquote>
+                <a href="00000000000000000000000000007777777777777777777777777777777777777777777777777.html"><img src="exportpngarrow1000.png" width="100" height="100" alt=""/></a> </blockquote>
               </blockquote>
             </blockquote>
           </blockquote>
@@ -41,49 +41,11 @@ body {
           <ol>
             <ol>
               <ol>
-                
-                <blockquote>
-                  <blockquote>
-                    <blockquote>
-                      <blockquote>
-                        <blockquote>
-                          <blockquote>
-                            <blockquote>
-                              <blockquote>
-                                <blockquote>
-                                  <blockquote>
-                                    <blockquote>
-                                      <blockquote>
-                                        <blockquote>
-                                          <blockquote>
-                                            <blockquote>
-                                              <blockquote>
-                                                <blockquote>
-                                                  <p><a href="xdfilepage2.html"><img src="snowstorm888.jpg" width="200" height="100" alt=""/></a>
-                                                  </p>
-                                                </blockquote>
-                                              </blockquote>
-                                            </blockquote>
-                                          </blockquote>
-                                        </blockquote>
-                                      </blockquote>
-                                    </blockquote>
-                                  </blockquote>
-                                </blockquote>
-                              </blockquote>
-                            </blockquote>
-                          </blockquote>
-                        </blockquote>
-                      </blockquote>
-                    </blockquote>
-                  </blockquote>
-                </blockquote>
+                <img src="image1000photoshop.jpg" width="500" height="400" alt=""/>
                 <li>MANAGE STOCKS</li>
-              </ol>
-              <ol>
                 <section>                  
                   <p>VIEW STOCKMARKET CHARTS AND GRAPHS<em></em>                </p>
-                <img src="000stockmarket000.jpg" width="348" height="145" alt=""/>                </section>
+                </section>
               </ol>
             </ol>
           </ol>
