--- a/index.html
+++ b/index.html
@@ -3,102 +3,8 @@
 <head>
 <meta charset="utf-8">
 <title>Untitled Document</title>
-<style type="text/css">
-body,td,th {
-    color: #8F07A2;
-}
-body {
-    background-color: #0BEDC7;
-}
-</style>
-<script type="text/javascript">
-function MM_preloadImages() { //v3.0
-  var d=document; if(d.images){ if(!d.MM_p) d.MM_p=new Array();
-    var i,j=d.MM_p.length,a=MM_preloadImages.arguments; for(i=0; i<a.length; i++)
-    if (a[i].indexOf("#")!=0){ d.MM_p[j]=new Image; d.MM_p[j++].src=a[i];}}
-}
-</script>
 </head>
 
-<body style="font-family: 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', 'DejaVu Sans', Verdana, sans-serif; font-size: larger; color: #FC7F03; font-style: oblique; font-weight: bold;">
-<a href="xdfilepage2.html">
-<main>
-  <blockquote>
-    <blockquote>
-      <blockquote>
-        <blockquote>
-          <blockquote>
-            <blockquote>
-              <blockquote>
-                <blockquote>
-                  <p>STOCK MARKET ENTERPRISES</p>
-                  <blockquote>
-                    <blockquote>
-                      <blockquote>
-                        <blockquote>
-                          <blockquote>
-                            <blockquote>
-                              <blockquote>
-                                <blockquote>
-                                  <blockquote>
-                                    <blockquote>
-                                      <blockquote>
-                                        <blockquote>
-                                          <blockquote>
-                                            <blockquote>
-                                              <blockquote>
-                                                <blockquote>
-                                                  <blockquote>
-                                                    <blockquote>
-                                                      <p><img src="exportpngarrow1000.png" alt="" width="100" height="100" id="Image3">                </p>
-                                                    </blockquote>
-                                                  </blockquote>
-                                                </blockquote>
-                                              </blockquote>
-                                            </blockquote>
-                                          </blockquote>
-                                        </blockquote>
-                                      </blockquote>
-                                    </blockquote>
-                                  </blockquote>
-                                </blockquote>
-                              </blockquote>
-                            </blockquote>
-                          </blockquote>
-                        </blockquote>
-                      </blockquote>
-                    </blockquote>
-                  </blockquote>
-                </blockquote>
-              </blockquote>
-            </blockquote>
-          </blockquote>
-        </blockquote>
-      </blockquote>
-    </blockquote>
-  </blockquote>
-</main>
-<header style="font-family: Gotham, 'Helvetica Neue', Helvetica, Arial, sans-serif; font-size: larger; color: #013AF1; font-style: italic; font-weight: 900;">
-  <ol>
-    <ol>
-      <ol>
-        <ol>
-          <ol>
-            <ol>
-              <ol>
-                <img src="image1000photoshop.jpg" width="500" height="400" alt=""/><img src="snowstorm888.jpg" width="400" height="100" alt=""/>
-                <li>MANAGE STOCKS</li>
-                <section>                  
-                  <p>VIEW STOCKMARKET CHARTS AND GRAPHS                </p>
-                </section>
-              </ol>
-            </ol>
-          </ol>
-        </ol>
-      </ol>
-    </ol>
-  </ol>
-</header>
-</a>
+<body><iframe width="1920" height="1934" src="https://xd.adobe.com/embed/8a1a9e3d-7122-4753-b4da-450be1ff88b0-df49/" frameborder="0" allowfullscreen></iframe>
 </body>
 </html>
